k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: default
  labels:
    app: portfolio-ui
spec:
  type: ClusterIP # Keeps the service internal to the cluster. External access is handled by Ingress.
  selector:
    app: portfolio-ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
